--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -26,7 +26,6 @@ a {
   justify-content: center;
   margin: 0px;
   padding: 5px 15px;
-  transition: 0.2s;
 
   &:hover {
     cursor: pointer;
