--- a/src/theme.css
+++ b/src/theme.css
@@ -67,3 +67,11 @@
     background-color: #bbbbbb;
   }
 }
+
+.light-var-shadow {
+  box-shadow: 0px 0px 10px 3px var(--primary);
+}
+
+.dark-var-shadow {
+  box-shadow: 0px 0px 10px 3px var(--secondary);
+}
